[BC-90] - Return empty assessment set (#316)
## What

If a claim exists but has no assessments then we should return a 200 and
an empty result set instead of a 404

## Checklist

Before you ask people to review this PR please ensure the following and
mark as complete when done:

- [x] Tests should be passing: `./gradlew test`
- [x] Github should not be reporting conflicts; you should have recently
run `git rebase main`.
- [x] Avoid mixing whitespace changes with code changes in the same
commit. These make diffs harder to read and conflicts more likely.
- [x] You should have looked at the diff against main and ensured that
nothing unexpected is included in your changes.
- [x] You should have checked that the commit messages say why the
change was made.
- [x] If applicable, you have executed the end-to-end (E2E) tests using
the
[bulk-submission-and-fee-scheme-tests-](https://github.com/ministryofjustice/bulk-submission-and-fee-scheme-tests-)
repository and confirmed they pass.